--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@svgr/webpack": "^8.1.0"
+    "@svgr/webpack": "^8.1.0",
+    "babel-plugin-styled-components": "^2.1.4"
   }
 }
