--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
@@ -28,6 +27,9 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "babel-plugin-styled-components": "^2.1.4"
+    "autoprefixer": "10.4.15",
+    "babel-plugin-styled-components": "^2.1.4",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   }
 }
