--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "10.4.15",
     "babel-plugin-styled-components": "^2.1.4",
     "postcss": "^8.4.29",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3"
   }
 }
